
  28 Jan 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.12.7.ebuild,
  -lh-sources-3.12.8.ebuild:
  sys-kernel/lh-sources: Drop old

*lh-sources-3.12.9 (28 Jan 2014)

  28 Jan 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.9.ebuild,
  lh-sources-3.13.0.ebuild:
  Bump BFQ patch

  27 Jan 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.13.0.ebuild:
  Fix aufs3 release

*lh-sources-3.13.0 (23 Jan 2014)

  23 Jan 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.0.ebuild,
  +files/lh-sources-3.13-armv6.patch:
  Bump to latest aufs3, linux and genpatch release

  20 Jan 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.12.8.ebuild:
  Bump to latest aufs3

*lh-sources-3.12.8 (16 Jan 2014)

  16 Jan 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.8.ebuild:
  Bump to latest genpatches and linux release

  14 Jan 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.10.19.ebuild,
  -lh-sources-3.12.0.ebuild, -lh-sources-3.12.1.ebuild,
  -lh-sources-3.12.2.ebuild, -lh-sources-3.12.3.ebuild,
  -lh-sources-3.12.4.ebuild, -lh-sources-3.12.5.ebuild,
  -lh-sources-3.12.6.ebuild:
  Drop old

  14 Jan 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.12.7.ebuild,
  +files/lh-sources-3.12.7-mmap-aufs3.patch, +files/a.patch:
  Add fix for aufs3 patch incompatibility

  13 Jan 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.12.7.ebuild:
  Bump to latest aufs3 release

*lh-sources-3.12.7 (10 Jan 2014)

  10 Jan 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.7.ebuild:
  Bump to latest genpatches, linux and aufs3 releases

*lh-sources-3.12.6 (22 Dec 2013)

  22 Dec 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.6.ebuild:
  Bump to latest genpatches and linux releases

*lh-sources-3.12.5 (13 Dec 2013)

  13 Dec 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.5.ebuild:
  Bump to latest genpatches and linux releases

*lh-sources-3.12.4 (08 Dec 2013)

  08 Dec 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.4.ebuild: