@@ -6,6 +6,7 @@ DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7-for-3.12.0.patch1 34378 
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7-for-3.13.0.patch1 34378 SHA256 ca7de5411b5315cdab1256b4c2d68a20b2658161a8b7cd58c67b48c8f0fdd7e3 SHA512 3cf1024400c78ecb9fc857e7c6c3462d2b142260402e493ae8528c8eb2cecf5ddf568976ca5223f99cb63e7fb7c2c51e45bc7af46867ddc195154392118c1b95 WHIRLPOOL cd6b85d0e4597ad640216e519d9d124c11a81baf3632192d132de84469a5c48c67d5acdd978a6e27aa331db88b1b4d0410031eb002d916a1c619bc52fb167ff4
 DIST README-3.12.9.BFQ 15314 SHA256 3e7818d1c7d741ba2d8f2d1a33f6169480646e5dba2c7158b169e7f3b92e89b6 SHA512 23d1b8ef55c6e69f115c5569e188997873356c7bf4edd4122b1190c14aa5158834f42096fd45adaf4eefbb337669f70038c374624ad0c9d3c2ccc1ebd4fc921a WHIRLPOOL a06648eb130efeaca9cd25a62b6604569f4e61a1573bf1e1ad7ceb1439a6a1ba49d6cdba61b495e958bb11948343a2883dbce3a04ec33101533ab2d6be34b97c
 DIST README-3.13.0.BFQ 10347 SHA256 0ef50b60864e87c2b459dd2d7597ec057e9675b9d8544ba6c9aa5c0ec02481e3 SHA512 333ffa54419c98434a6d3e6c95a720a2a99fedda214dfc1a6064da68161f40571991783bfc45b890d1e61575354c25bdf5cb7907b6fededeb25e3eb696456d2d WHIRLPOOL 82a220441412ffdcb39439fb90651085cfc852a0385e908804462a4d8931c2eabe6678b9911a5989ecf1f524fa371d07dacb9e647bece489429c684417026d47
+DIST README-3.13.1.BFQ 15314 SHA256 8e7c5e1639c80639f136eb7e93d34567b192abe8bce66454547b4632d7e1c1ec SHA512 c8907ed9d7716324649e093388458fc1287b87e3e4eaefcd573e441d729321d47d7bd9009e4d68ad25849c6319ddb5acce2a26ca7b45ed1bfa2563abcdcbb58e WHIRLPOOL 7acdf7969c04bd07cedf99ba8e76928f6160900a3bc1e6f9869dfc4fcbea1aeb4e9ba347b2403b4a17d54fcae58a7b745aa7b747a63c9248edb948a371682103
 DIST aufs-sources-3.12.x_p20140127.tar.xz 152188 SHA256 649ca61d4cd38e5b93aaefc1acdaa09367f552bea41a8b8e1ac792f51673a631 SHA512 760bdfc20113cdfae9c126851c94b99447c0203c5b4a517f785871308bed0710742a355cec6761ea216fd62a3921fc3a701015af56b28bff543ed5c0dce9fb26 WHIRLPOOL 899523d0a09b747c7e305512d4a11486747f3796f6a199743ae1c268fc7bfc997a5f1d6e1212e3c9eeca26bce959d8e96b1417ec35ae5578992d3366169fc8dd
 DIST aufs-sources-3.13_p20140127.tar.xz 152200 SHA256 e18951d96973503292d7f801721f2cbc4c40dfff07fccbd44d0db8fff980ab39 SHA512 1aadf71acfef0d6de248869eefdd4e9d8cd69e1a897e123a4d9c80d78dcedd31538b4e7a44325bb8a6a8234af11d799e753bb8a00322c3307a47a6a6362ede6c WHIRLPOOL e5b4b14a040661f17e46cafe70f32faa18d38cd62b16b494d4627107ecba7ceab85a1f5f67fccf8db3ca10bf60a808f8e6f573f9a9eea95f5742df9983e61e10
 DIST deblob-3.12 120320 SHA256 1d767acd3f461bcaa7ebef744dce1ca3eefde1cd41fde4c69a449e2470ab8c0e SHA512 61073cb763e3e0c21a84c0ee888087fbbf37b667ce0efbbc6c2ebc46ccae8460553511e347cf23d3c3603eec64df738ad4552a1b527453c7d795b8f90c4cf678 WHIRLPOOL c64cc566944ac241149a2a517da069185830be5b8ee25168b2b6b942bcf24fe3f2c0fe487b51a5b7e73e2910af2cabd7167cd1497ab7272c865d1eb3e68e4efe
@@ -16,6 +17,8 @@ DIST genpatches-3.12-10.base.tar.xz 261224 SHA256 9949e934be03c5e34a593cb579c8e6
 DIST genpatches-3.12-10.extras.tar.xz 18148 SHA256 2f865fc797b96ca30ac437718bb8b9feef442d3ed99b61224d5dc496b5ac7f2c SHA512 a0851b94669e097b3493baa6625b052dd6ce6bf3b318ba62474b8d230526bbacd3751a99ea108b641dcab490129aa370327e8c971996db3afb088e3053f761ff WHIRLPOOL edea43599166eedc00a4254fd32930e21f082af64e067cfb2b8731016062ce132641ae3abbd30a321bddf66db6eabe026d979b98f1802c12c0ffc26f8b149eff
 DIST genpatches-3.13-2.base.tar.xz 7760 SHA256 a618a823b41f48d70d56ac77127c44c1ba0af1988b1deb2bd74cd4e95bf80962 SHA512 65a00dd47b57719c28aaa53299dffce5955a6bacacc18d96063c5c4cab688212da886443754f62d89310d1e5dac2f93c88eff5a381cee416129648a48c41e1c5 WHIRLPOOL b26a96da505c39a422382c2fc912afca17ffc572bdd55d070d29af3cd87d474078ebc3a4672d1637aa35daca94887d715108e60871770739100176f884962baf
 DIST genpatches-3.13-2.extras.tar.xz 18168 SHA256 a00603ac5ca73f37261c2dca4f8c396a9d2b988fd326c793d9016fe8355e790a SHA512 25fd010838a4de56a513dbb21cb1ffd3c99566cdfd55011f1fe25811d1b2c882c62be6d6904115f1f1aa894bc917a61fdf5009c119e2a2614d39d3c258382453 WHIRLPOOL 7d245c855d6ac0b501317d33924fdd8c92ac2dd5b13ea0377fd169e01df27442413dd4e648d7f71e96a1e071f5788553dfcc7db3f12ea9ecf5efbbd3614eaaeb
+DIST genpatches-3.13-3.base.tar.xz 10856 SHA256 d78c4a7d14005b537c6ffcb1319da8e8b25989eb99ed3c8a3d86d377e63a0d7f SHA512 b7fbdee52fa2eef72775eb2c81896490e57bb7f58cd2f6b9e0d72a66516cfabb92c616afbf6576e4e5dcd342475db09f38dfa6a649cbf0f234c964794d598247 WHIRLPOOL c4434f8af64df751e1549cca301b439d6814b58ee7cd39a244fca160752a3a82ddcad82413f1d4a1a7f80bafe1d95ea3f09b89f46026d969c202c05af485cb6a
+DIST genpatches-3.13-3.extras.tar.xz 18168 SHA256 a00603ac5ca73f37261c2dca4f8c396a9d2b988fd326c793d9016fe8355e790a SHA512 25fd010838a4de56a513dbb21cb1ffd3c99566cdfd55011f1fe25811d1b2c882c62be6d6904115f1f1aa894bc917a61fdf5009c119e2a2614d39d3c258382453 WHIRLPOOL 7d245c855d6ac0b501317d33924fdd8c92ac2dd5b13ea0377fd169e01df27442413dd4e648d7f71e96a1e071f5788553dfcc7db3f12ea9ecf5efbbd3614eaaeb
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-391b268db43db7e45acdec900adebb2d1545db9f.patch 13917 SHA256 6663d52214c11ad1b76cdbc0e4ba2864747682c56319b5de31f7bb24251a0ebf SHA512 17ff40ac339ce8f0a6cc503859d3480011555688239277e14a80f767515bd8644ac2452fa8e3ca093e4c977f79428197cdf30239816f6bb6bfc27407b3f6c033 WHIRLPOOL cda377a9b8d8fa549d24856b78b9109de4aba6bf8e84b08a2486788ae59f44f715cd3f191b69d8ce4ff536414ca0bf635a4c524d515519710be09388a0327488
 DIST linux-3.12.tar.xz 76384600 SHA256 2e120ec7fde19fa51dc6b6cc11c81860a0775defcad5a5bf910ed9a50e845a02 SHA512 4ba5797e0772726d05c9f2eee66dc6dc2a5033c749ef44764c805a83da739ed5d0c6443b76785e38fe1ef74cc7ade787e48144faed0cfcb6f124f05248c700ff WHIRLPOOL a40195f6b53ba3440cf90a44495f6a59670f750851d1518e2bdfe3b949f0e898d1df5d37e271c31c555087026ddb6cc2c9109b22b9639e3222735e6f650a1417
